--- a/core/plugins/groups/activity/assets/css/activity.css
+++ b/core/plugins/groups/activity/assets/css/activity.css
@@ -182,7 +182,7 @@
 
 	/* Action */
 	.group_managers>.activity-content .activity-channel,
-	.activity-action {
+	/*.activity-action {
 		font-size: 0.75em;
 		line-height: 1;
 		border: 1px solid #aaa;
@@ -196,7 +196,7 @@
 		position: absolute;
 		bottom: 1.61803399em;
 		left: 2em;
-	}
+	}*/
 	.group_managers>.activity-content .activity-channel {
 		left: 10em;
 		border-color: #beace0;
@@ -235,12 +235,12 @@
 		color: #5cb4e4;
 	}
 
-	.activities .activity-event>*:first-child{
+	/*.activities .activity-event>*:first-child{
 		margin-top: 0;
 		padding-top: 0;
 		margin-bottom: 0;
 		padding-bottom: 0;
-	}
+	}*/
 	.activities .activity-event-preview>*:first-child,
 	.activities .activity-event-content>*:first-child {
 		margin-top: 0;
@@ -269,9 +269,9 @@
 
 	/* Timestamp */
 	.activity-time {
-		position: absolute;
+		/*position: absolute;
 		top: 0.61803399em;
-		right: 0.61803399em;
+		right: 0.61803399em;*/
 	}
 	.activity-channel,
 	.activity-context {
@@ -280,8 +280,26 @@
 
 	/* Options */
 	.activity-options {
-		min-height: 3em;
+		/*min-height: 3em;*/
+		text-align: right;
+		opacity: 0.5;
+		padding: 0.61803399em 1em;
 	}
+	.activity-content:hover .activity-options {
+		opacity: 1;
+	}
+
+@media (min-width: 50em) {
+	.activities .activity-details {
+		margin: 1em 7em 0 0;
+	}
+	.activity-options {
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 0.3em 1em;
+	}
+}
 	.activity-options .icon-share:before {
 		content: "\f064";
 	}
@@ -317,14 +335,6 @@
 	}
 	.activity-options .icon-delete:hover:before {
 		color: red;
-	}
-	.activity-options {
-		text-align: right;
-		opacity: 0.5;
-		padding: 0.61803399em 1.61803399em;
-	}
-	.activity-content:hover .activity-options {
-		opacity: 1;
 	}
 
 	.activity-options-main {
