--- a/core/plugins/members/activity/assets/css/activity.css
+++ b/core/plugins/members/activity/assets/css/activity.css
@@ -139,7 +139,11 @@
 		border-color: transparent #fff transparent transparent; 
 	}
 
-	/* Action */
+	.activity-source {
+		padding: 0 0 0.61803399em 0;
+	}
+
+	/* Action 
 	.activity-action {
 		display: inline-block;
 		font-size: 0.75em;
@@ -151,12 +155,11 @@
 		text-transform: uppercase;
 		letter-spacing: 0.1em;
 		padding: 0.3em 0.4em;
-		/*display: none;*/
 		display: block;
 		position: absolute;
 		bottom: 1.61803399em;
 		left: 2em;
-	}
+	}*/
 	.subscribed .activity-action,
 	.invited .activity-action,
 	.created .activity-action {
@@ -185,12 +188,12 @@
 		color: #5cb4e4;
 	}
 
-	.activities .activity-event>*:first-child {
+	/*.activities .activity-event>*:first-child {
 		margin-top: 0;
 		padding-top: 0;
 		margin-bottom: 0;
 		padding-bottom: 0;
-	}
+	}*/
 	.activities .activity-event-preview>*:first-child,
 	.activities .activity-event-content>*:first-child {
 		margin-top: 0;
@@ -218,9 +221,9 @@
 	}
 
 	.activity-time {
-		position: absolute;
+		/*position: absolute;
 		top: 0.61803399em;
-		right: 0.61803399em;
+		right: 0.61803399em;*/
 	}
 	.activity-channel,
 	.activity-context {
@@ -228,6 +231,27 @@
 	}
 
 	/* Options */
+	.activity-options {
+		text-align: right;
+		opacity: 0.5;
+		padding: 0.61803399em 1em;
+	}
+	.activity-content:hover .activity-options {
+		opacity: 1;
+	}
+
+@media (min-width: 50em) {
+	.activities .activity-details {
+		margin: 1em 7em 0 0;
+	}
+	.activity-options {
+		position: absolute;
+		top: 0;
+		right: 0;
+		padding: 0.3em 1em;
+	}
+}
+
 	.activity-options .icon-share:before {
 		content: "\f064";
 	}
@@ -263,14 +287,6 @@
 	}
 	.activity-options .icon-delete:hover:before {
 		color: red;
-	}
-	.activity-options {
-		text-align: right;
-		opacity: 0.5;
-		padding: 0.61803399em 1.61803399em;
-	}
-	.activity-content:hover .activity-options {
-		opacity: 1;
 	}
 
 	.activity-options-main {
