[APP/COM_PARTNERS] rest of help pages

--- a/admin/help/en-GB/partners.phtml
+++ b/admin/help/en-GB/partners.phtml
@@ -1,4 +1,4 @@
-<article>
+<partner>
 	<h1><span>Partner Display</span></h1>
 
 	<ul class="nav">
@@ -45,13 +45,13 @@
 		<p>The functions are:</p>
 		<dl>
 			<dt>Trash</dt>
-			<dd>Changes the status of the selected partners to indicate that they are trashed.  Trashed articles can still be recovered by selecting "Trashed" in the Select Status filter and changing the status of the articles to Published or Unpublished as preferred.  To permanently delete trashed articles, select "Trashed" in the Select Status filter, select the articles to be permanently deleted, then click the Empty Trash toolbar icon.</dd>
+			<dd>Changes the status of the selected partners to indicate that they are trashed.  Trashed partners can still be recovered by selecting "Trashed" in the Select Status filter and changing the status of the partners to Published or Unpublished as preferred.  To permanently delete trashed partners, select "Trashed" in the Select Status filter, select the partners to be permanently deleted, then click the Empty Trash toolbar icon.</dd>
 
 			<dt>Edit</dt>
-			<dd>Opens the editing screen for the selected partner. If more than one particle is selected (where applicable), only the first partner will be opened. The editing screen can also be opened by clicking on the Title or Name of the article.</dd>
+			<dd>Opens the editing screen for the selected partner. If more than one partner is selected (where applicable), only the first partner will be opened. The editing screen can also be opened by clicking on the name of the partner.</dd>
 
 			<dt>New</dt>
-			<dd>Opens the editing screen to create a new article.</dd>
+			<dd>Opens the editing screen to create a new partner.</dd>
 
 			<dt>Help</dt>
 			<dd>Opens this help screen.</dd>
@@ -59,7 +59,7 @@
 	</section>
 	<section id="sub-menu">
 		<h2><span>Sub-menu Links</span></h2>
-		<p>At the top left, above the filters, you will see sub-menu options. These are links to the partners component which you are already at and the partner types admin page. The links are:</p>
+		<p>At the top left, above the filters, you will see sub-menu options. These are links to the partners component which you are already at and the partner types admin page.</p>
 	
 	</section>
 	<section id="list-filters">
@@ -85,4 +85,4 @@
 			<dd>Click to go to the last page.</dd>
 		</dl>
 	</section>
-</article>
+</partner>
