[APP/COM_PARTNERS] publishing taken away from partner types

--- a/admin/help/en-GB/partner_types.phtml
+++ b/admin/help/en-GB/partner_types.phtml
@@ -21,7 +21,7 @@
 
 		<dl>
 			<dt>Checkbox</dt>
-			<dd>Check this box to select one or more items. To select all items, check the box in the column heading. After one or more boxes are checked, click a toolbar button to take an action on the selected item or items. Many toolbar actions, such as Publish and Unpublish, can work with multiple items. Others, such as Edit, only work on one item at a time. If multiple items are checked and you press Edit, the first item will be opened for editing.</dd>
+			<dd>Check this box to select one or more items. To select all items, check the box in the column heading. After one or more boxes are checked, click a toolbar button to take an action on the selected item or items. Many toolbar actions can work with multiple items. Others, such as Edit, only work on one item at a time. If multiple items are checked and you press Edit, the first item will be opened for editing.</dd>
 
 			<dt>ID</dt>
 			<dd>This is a unique identification number for this item assigned automatically by the system. It is used to identify the item internally and cannot be changed. When creating a new partner type, this field is 0 until the entry is saved, at which point a new ID is assigned to it.</dd>
