[APP/COM_PARTNERS] twitter handle

--- a/admin/help/en-GB/partner.phtml
+++ b/admin/help/en-GB/partner.phtml
@@ -47,8 +47,8 @@
 			<dt>Logo(URL)</dt>
 			<dd>A link to their logo, this should be uploaded through media upload</dd>
 			
-			<dt>Social Media (URL)</dt>
-			<dd>A link to their facebook or twitter account</dd>
+			<dt>Twitter Handle)</dt>
+			<dd>A link to their twitter account</dd>
 
 			<dt>QUBES Liason</dt>
 			<dd>The member number of the QUBES Liason</dd>
