[COM_CONTENT][COM_CATEGORIES] Convert to use Relational models instead of the legecy Joomla based JTable models.

--- a/core/components/com_content/models/forms/article.xml
+++ b/core/components/com_content/models/forms/article.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-	<fieldset addfieldpath="/core/components/com_categories/admin/models/fields" >
-		<field name="id"  type="text" class="readonly" label="JGLOBAL_FIELD_ID_LABEL"
+	<fieldset addfieldpath="/core/components/com_categories/models/fields" >
+		<field name="id"  type="text"  label="JGLOBAL_FIELD_ID_LABEL"
 			description ="JGLOBAL_FIELD_ID_DESC" size="10" default="0"
 			readonly="true"  />
 
 		<field name="asset_id" type="hidden" filter="unset" />
 
 		<field name="title" type="text" label="JGLOBAL_TITLE"
-			description="JFIELD_TITLE_DESC" class="inputbox" size="30"
+			description="JFIELD_TITLE_DESC"  size="30"
 			required="true" />
 
 		<field name="alias" type="text" label="JFIELD_ALIAS_LABEL"
-			description="JFIELD_ALIAS_DESC" class="inputbox" size="45" />
+			description="JFIELD_ALIAS_DESC"  size="45" />
 
-		<field name="articletext" type="editor" class="inputbox"
+		<field name="introtext" type="editor" 
 			label="COM_CONTENT_FIELD_ARTICLETEXT_LABEL" description="COM_CONTENT_FIELD_ARTICLETEXT_DESC"
 			filter="JComponentHelper::filterText" buttons="true" cols="50" rows="15" />
 
 		<field name="state" type="list" label="JSTATUS"
-			description="JFIELD_PUBLISHED_DESC" class="inputbox"
+			description="JFIELD_PUBLISHED_DESC" 
 			filter="intval" size="1" default="1"
 		>
 			<option value="1">
@@ -34,27 +34,30 @@
 
 		<field name="catid" type="categoryedit"
 			label="JCATEGORY" description="JFIELD_CATEGORY_DESC"
-			class="inputbox" required="true"
+			required="true"
 		>
 		</field>
 		<field
 			name="buttonspacer"
 			description="JGLOBAL_ACTION_PERMISSIONS_DESCRIPTION"
 			type="spacer" />
-		<field name="created" type="calendar" label="COM_CONTENT_FIELD_CREATED_LABEL" description="COM_CONTENT_FIELD_CREATED_DESC" class="inputbox" size="22" format="%Y-%m-%d %H:%M:%S" filter="user_utc" />
+		<field name="created" type="calendar" label="COM_CONTENT_FIELD_CREATED_LABEL"
+			description="COM_CONTENT_FIELD_CREATED_DESC" size="22"
+			readonly="true" format="%Y-%m-%d %H:%M:%S" filter="user_utc" />
 
-		<field name="created_by" type="user"
+		<field name="created_by" type="text"
 			label="COM_CONTENT_FIELD_CREATED_BY_LABEL" description="COM_CONTENT_FIELD_CREATED_BY_DESC" />
 
 		<field name="created_by_alias" type="text"
 			label="COM_CONTENT_FIELD_CREATED_BY_ALIAS_LABEL" description="COM_CONTENT_FIELD_CREATED_BY_ALIAS_DESC"
-			class="inputbox" size="20" />
+			size="20" />
 
-		<field name="modified" type="calendar" class="readonly" label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_CONTENT_FIELD_MODIFIED_DESC" size="22" readonly="true" format="%Y-%m-%d %H:%M:%S" filter="user_utc" />
+		<field name="modified" type="calendar"
+			label="JGLOBAL_FIELD_MODIFIED_LABEL" description="COM_CONTENT_FIELD_MODIFIED_DESC"
+			size="22" readonly="true" format="%Y-%m-%d %H:%M:%S" filter="user_utc" />
 
-		<field name="modified_by" type="user"
+		<field name="modified_by" type="text"
 		label="JGLOBAL_FIELD_MODIFIED_BY_LABEL"
-		class="readonly"
 		readonly="true"
 		filter="unset"
 		 />
@@ -63,41 +66,41 @@
 
 		<field name="checked_out_time" type="hidden" filter="unset" />
 
-		<field name="published_up" type="calendar"
+		<field name="publish_up" type="calendar"
 			label="COM_CONTENT_FIELD_PUBLISH_UP_LABEL" description="COM_CONTENT_FIELD_PUBLISH_UP_DESC"
-			class="inputbox" format="%Y-%m-%d %H:%M:%S" size="22"
+			 format="%Y-%m-%d %H:%M:%S" size="22"
 			filter="user_utc" />
 
 		<field name="publish_down" type="calendar"
 			label="COM_CONTENT_FIELD_PUBLISH_DOWN_LABEL" description="COM_CONTENT_FIELD_PUBLISH_DOWN_DESC"
-			class="inputbox" format="%Y-%m-%d %H:%M:%S" size="22"
+			 format="%Y-%m-%d %H:%M:%S" size="22"
 			filter="user_utc" />
 
-		<field name="version" type="text" class="readonly"
+		<field name="version" type="text" 
 			label="COM_CONTENT_FIELD_VERSION_LABEL" size="6" description="COM_CONTENT_FIELD_VERSION_DESC"
 			readonly="true" filter="unset" />
 
 		<field name="ordering" type="text" label="JFIELD_ORDERING_LABEL"
-			description="JFIELD_ORDERING_DESC" class="inputbox" size="6"
+			description="JFIELD_ORDERING_DESC"  size="6"
 			default="0" />
 
 		<field name="metakey" type="textarea"
 			label="JFIELD_META_KEYWORDS_LABEL" description="JFIELD_META_KEYWORDS_DESC"
-			class="inputbox" rows="3" cols="30" />
+			 rows="3" cols="30" />
 
 		<field name="metadesc" type="textarea"
 			label="JFIELD_META_DESCRIPTION_LABEL" description="JFIELD_META_DESCRIPTION_DESC"
-			class="inputbox" rows="3" cols="30" />
+			 rows="3" cols="30" />
 
 		<field name="access" type="accesslevel" label="JFIELD_ACCESS_LABEL"
-			description="JFIELD_ACCESS_DESC" class="inputbox" size="1" />
+			description="JFIELD_ACCESS_DESC"  size="1" />
 
 		<field name="hits" type="text" label="JGLOBAL_HITS"
-			description="COM_CONTENT_FIELD_HITS_DESC" class="readonly" size="6"
+			description="COM_CONTENT_FIELD_HITS_DESC"  size="6"
 			readonly="true" filter="unset" />
 
 		<field name="language" type="contentlanguage" label="JFIELD_LANGUAGE_LABEL"
-			description="COM_CONTENT_FIELD_LANGUAGE_DESC" class="inputbox"
+			description="COM_CONTENT_FIELD_LANGUAGE_DESC" 
 		>
 			<option value="*">JALL</option>
 		</field>
@@ -111,13 +114,12 @@
 			<option value="1">JYES</option>
 		</field>
 
+
 		<field name="rules" type="rules" label="JFIELD_RULES_LABEL"
-			translate_label="false" class="inputbox" filter="rules"
+			translate_label="false"  filter="rules"
 			component="com_content" section="article" validate="rules"
 		/>
-
 	</fieldset>
-
 	<fields name="attribs">
 		<fieldset name="basic" label="COM_CONTENT_ATTRIBS_FIELDSET_LABEL">
 			<field
@@ -325,7 +327,7 @@
 			<field name="alternative_readmore" type="inputbox"
 				label="JFIELD_READMORE_LABEL"
 				description="JFIELD_READMORE_DESC"
-				class="inputbox" size="25" />
+				 size="25" />
 
 			<field name="article_layout" type="componentlayout"
 				label="JFIELD_ALT_LAYOUT_LABEL"
@@ -521,7 +523,7 @@
 			<field name="alternative_readmore" type="hidden"
 				label="JFIELD_READMORE_LABEL"
 				description="JFIELD_READMORE_DESC"
-				class="inputbox" size="25" />
+				 size="25" />
 
 			<field name="article_layout" type="hidden"
 				label="JFIELD_ALT_LAYOUT_LABEL"
@@ -535,7 +537,7 @@
 	<field name="xreference" type="text"
 		label="JFIELD_KEY_REFERENCE_LABEL"
 		description="JFIELD_KEY_REFERENCE_DESC"
-		class="inputbox" size="20" />
+		 size="20" />
 
 	<fields name="images">
 			<field
@@ -557,13 +559,13 @@
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_ALT_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_ALT_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field name="image_intro_caption"
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_CAPTION_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field
 				name="spacer1"
@@ -589,13 +591,13 @@
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_ALT_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_ALT_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field name="image_fulltext_caption"
 				type="text"
 				label="COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL"
 				description="COM_CONTENT_FIELD_IMAGE_CAPTION_DESC"
-				class="inputbox"
+				
 				size="20" />
 	</fields>
 	<fields name="urls">
@@ -615,7 +617,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_URLA_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field
 				name="targeta"
@@ -624,7 +626,7 @@
 				description="COM_CONTENT_URL_FIELD_BROWSERNAV_DESC"
 				default=""
 				filter="options"
-				class="inputbox">
+				>
 				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JBROWSERTARGET_PARENT</option>
 				<option value="1">JBROWSERTARGET_NEW</option>
@@ -647,7 +649,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_URLB_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field
 				name="targetb"
@@ -656,7 +658,7 @@
 				description="COM_CONTENT_URL_FIELD_BROWSERNAV_DESC"
 				default=""
 				filter="options"
-				class="inputbox">
+				>
 					<option value="">JGLOBAL_USE_GLOBAL</option>
 					<option value="0">JBROWSERTARGET_PARENT</option>
 					<option value="1">JBROWSERTARGET_NEW</option>
@@ -680,7 +682,7 @@
 				type="text"
 				label="COM_CONTENT_FIELD_URLC_LINK_TEXT_LABEL"
 				description="COM_CONTENT_FIELD_URL_LINK_TEXT_DESC"
-				class="inputbox"
+				
 				size="20" />
 			<field
 				name="targetc"
@@ -689,7 +691,7 @@
 				description="COM_CONTENT_URL_FIELD_BROWSERNAV_DESC"
 				default=""
 				filter="options"
-				class="inputbox">
+				>
 					<option value="">JGLOBAL_USE_GLOBAL</option>
 					<option value="0">JBROWSERTARGET_PARENT</option>
 					<option value="1">JBROWSERTARGET_NEW</option>
@@ -722,7 +724,7 @@
 			<field name="xreference" type="text"
 				label="COM_CONTENT_FIELD_XREFERENCE_LABEL"
 				description="COM_CONTENT_FIELD_XREFERENCE_DESC"
-				class="inputbox" size="20" />
+				 size="20" />
 		</fields>
 
 </form>
