--- a/core/assets/less/comments.less
+++ b/core/assets/less/comments.less
@@ -297,9 +297,9 @@
 			&.docx:before {
 				content: '\f0f5';
 			}
-			&.xsl:before,
+			&.xls:before,
 			&.csv:before,
-			&.xslx:before {
+			&.xlsx:before {
 				content: '\f0ce';
 			}
 			&.mpg:before,
