[MOD_REPORTPROBLEMS] Minor adjustment to colors to improve accessibility contrast ratios

--- a/core/modules/mod_reportproblems/assets/css/mod_reportproblems.css
+++ b/core/modules/mod_reportproblems/assets/css/mod_reportproblems.css
@@ -30,10 +30,11 @@
 		padding: 0 30px;
 		border: 8px solid #000;
 		text-align: left;
-		color: #aaa;
+		color: #ccc;
 		background: #151515;
 	}
 	#help-container h1 {
+		color: #fff;
 		display: none;
 	}
 	#help-container a {
