--- a/core/components/com_jobs/site/assets/css/jobs.css
+++ b/core/components/com_jobs/site/assets/css/jobs.css
@@ -154,6 +154,20 @@
 	}
 	.apply button {
 		margin-bottom: 1em;
+		margin-right: .5em;
+		font-size: 1.2em;
+		padding-left: 2em;
+		padding-right: 2em;
+	}
+	.edit button {
+		margin-bottom: 1em;
+		font-size: 1.2em;
+		padding-left: 2em;
+		padding-right: 2em;
+		//float: right;
+	}
+	.applied button {
+		margin-bottom: 1em;
 		font-size: 1.2em;
 		padding-left: 2em;
 		padding-right: 2em;
