[COM_PROJECTS] Fixing broken CSS comment

--- a/core/components/com_projects/site/assets/css/external.css
+++ b/core/components/com_projects/site/assets/css/external.css
@@ -28,7 +28,7 @@
 	height: 30px;
 }
 
-/* Team list (horizontal) */
+/* Team list (horizontal)
 --------------------------------------------- */
 #team-horiz {
 	display: block;
