[COM_JOBS] Porting over changes from 2.1.0
refs: https://github.com/hubzero/hubzero-cms/commit/31d17ea2e5d10d01cb2c53a084875af1bf8bee3d
refs: https://github.com/hubzero/hubzero-cms/commit/ce25d380336f0176e293bda4454ede2fc8e81be2
refs: https://github.com/hubzero/hubzero-cms/commit/6b0caccc0b565fe4f6e0b7cdafc7b7676ee05b9e
refs: https://github.com/hubzero/hubzero-cms/commit/1a457639f9f4cdab26f2e0f779fb92f0b83e7540
refs: https://github.com/hubzero/hubzero-cms/commit/f53eb461df6eceeb34b091501651561a6798a2b1
refs: https://github.com/hubzero/hubzero-cms/commit/4b7bc00258edc35d10381ba73a3f05e4f2a03e3a
refs: https://github.com/hubzero/hubzero-cms/commit/591cff5322e8a82045e8497db384bd636bb400b4
refs: https://github.com/hubzero/hubzero-cms/commit/54f629c70cd03a00e478c7bfdcf7dcd2a03115e0
refs: https://github.com/hubzero/hubzero-cms/commit/1680a1533715c3b1652c8b799cb1daab3335593f
refs: https://github.com/hubzero/hubzero-cms/commit/7fdce5099e528583f33f104d9104df2235bfaf70
refs: https://github.com/hubzero/hubzero-cms/commit/c2e811451e0b44ad873db4fe23fc1efcdeedf5db
refs: https://github.com/hubzero/hubzero-cms/commit/d74274387ff24e2d6dfc10bda522dc5c9aaeb33c
refs: https://github.com/hubzero/hubzero-cms/commit/f9347d8d7fbd9f9d19caed0060267d2ae6f6ced4
refs: https://github.com/hubzero/hubzero-cms/commit/b9e6d54024ff61e83eebd66bfc69d3514ac9b8b5
refs: https://github.com/hubzero/hubzero-cms/commit/a0f89417d41da9b05c11908e31f617fc9a2d46e1
refs: https://github.com/hubzero/hubzero-cms/commit/910bac14e854e3c2bb44c7bec653b111c2b30259
refs: https://github.com/hubzero/hubzero-cms/commit/d5f948a2cfdedf7879ee19d6fb4f6e18a566739c
refs: https://github.com/hubzero/hubzero-cms/commit/01595057fc5b109469d2fb85723b763e87b0e393
refs: https://github.com/hubzero/hubzero-cms/commit/2849266f034b3a9b09557f368bfb111b607ca224
refs: https://github.com/hubzero/hubzero-cms/commit/b5858eb9b0e02fb5b54007155f9e1cee232b869e
refs: https://github.com/hubzero/hubzero-cms/commit/6afaff6533906cd18bff0da7fd7b37f17010ff46

--- a/core/components/com_jobs/site/assets/css/jobs.css
+++ b/core/components/com_jobs/site/assets/css/jobs.css
@@ -152,6 +152,52 @@
 		-o-border-radius: 6px;
 		border-radius: 6px;
 	}
+	.apply button {
+		margin-bottom: 1em;
+		margin-right: .5em;
+		font-size: 1.2em;
+		padding-left: 2em;
+		padding-right: 2em;
+	}
+	.edit button {
+		margin-bottom: 1em;
+		margin-right: .5em;
+		font-size: 1.2em;
+		padding-left: 2em;
+		padding-right: 2em;
+	}
+	.unpublish button {
+		margin-bottom: 1em;
+		font-size: 1.2em;
+		float: right;
+	}
+	.applied button {
+		margin-bottom: 1em;
+		font-size: 1.2em;
+		padding-left: 2em;
+		padding-right: 2em;
+		margin-right: .5em;
+	}
+	.manageroptions button {
+		margin-bottom: 1em;
+		margin-right: .5em;
+		font-size: 1.2em;
+		float: right;
+	}
+        .review_applicants {
+                padding-top: .5em;
+                float: right;
+        }
+        .review_applicants button {
+                margin-bottom: 1em;
+                font-size: 1.2em;
+                padding-left: 2em;
+                padding-right: 2em;
+        }
+        .review_applicants a button {
+                padding-left: 2em; 
+                padding-right: 2em; 
+        }    
 	#jobinfo div.apply .applybtn:hover {
 		background-color: #666;
 		border-bottom: 2px solid #000;
@@ -229,29 +275,6 @@
 	.confirmPublish {
 		text-align: center;
 		margin-top: 2em;
-	}
-	.confirmPublish span a {
-		padding: 0.2em 1em 0.2em 1em;
-		background: #d4efd2;
-		border: 1px solid #7aa777;
-		color: #2d6d28;
-	}
-	.confirmPublish span.alertnative,
-	span.alertnative {
-		margin: 0 1.5em;
-		font-style: italic;
-		color: #666;
-	}
-	.confirmPublish span.makechanges a {
-		padding: 0.2em 1em 0.2em 1em;
-		margin: 0;
-		background: #f3f3f3;
-		border: 1px solid #ccc;
-		color: #333;
-	}
-	.manageroptions {
-		float: right;
-		font-size: 85%;
 	}
 /* Job Posting  List */
 	ul.postings {
@@ -335,7 +358,7 @@
 	}
 	div.confirmscreen {
 		position: absolute;
-		border: 5px solid #e3aeae;
+		border: 5px solid #ee5f5b;
 		background-color: #FFFFFF;
 		left: 0;
 		width: 350px;
@@ -366,7 +389,7 @@
 		background-color: #FFFFFF;
 		border: none;
 		background-position: 0 50%;
-		text-align: left !important;
+		text-align: center !important;
 		padding-left: 20px !important;
 	}
 /* Resume Stats */
@@ -427,11 +450,13 @@
 	#candidates li.applic {
 		margin-top: 1em;
 		color: #000;
+		background: transparent;
 	}
 	#candidates li.applicbot {
 		border-bottom: 2px solid #f0decb;
 		margin-bottom: 1em;
 		padding-bottom: 1em;
+		background: transparent;
 	}
 	h4 {
 		margin-bottom: 0.5em;
@@ -718,7 +743,9 @@
 	#jobinfo .spacer {
 		padding: 0.3em;
 	}
-
+	#hubForm input {
+		margin-top: 0;
+	}
 /* Form */
 	.joblist {
 		margin: 0;
