[APP/COM_PARTNERS] Set max container width and centercards

--- a/site/assets/css/cards.css
+++ b/site/assets/css/cards.css
@@ -3,15 +3,12 @@
 }
 
 
-
-.logo {
-  height: 165px;
-}
-
 .cards {
   padding: 15px;
   display: flex;
+  max-width: 990px;
   flex-flow: row wrap;
+  justify-content: center;
 }
 
 .card {
@@ -93,11 +90,11 @@
   text-align: center;
 }
 
-.social {
+/*.social {
   float: none;
   margin-top: 10px;
   margin-left: 0;
-}
+}*/
 
 .card .social .fa-twitter {
   font-size: 1.75em;
@@ -106,6 +103,10 @@
 
 a.social-icon {
   color: #fff;
+}
+
+a.card-link {
+  color: #84bf41;
 }
 
 .card.is-collapsed .card__inner:after {
