[PLG_GROUPS_FORUM] Move new discussion button to the left

--- a/core/plugins/groups/forum/assets/css/forum.css
+++ b/core/plugins/groups/forum/assets/css/forum.css
@@ -82,6 +82,9 @@
 	.group_forum .entries thead {
 		text-align: right;
 	}
+	.group_forum .entries thead a {
+		float: left;
+	}
 	.group_forum .entry-details {
 		display: block;
 	}
